--- a/docker/executor/Dockerfile
+++ b/docker/executor/Dockerfile
@@ -27,5 +27,12 @@ COPY start-and-activate-exec.sh ${APP_HOME}/bin/start-and-activate-exec.sh
 RUN chmod a+x -R ${APP_HOME}/bin
 RUN chown executor: -R ${APP_HOME}
 
+RUN echo "deb [check-valid-until=no] http://cdn-fastly.deb.debian.org/debian jessie main" > /etc/apt/sources.list.d/jessie.list
+RUN echo "deb [check-valid-until=no] http://archive.debian.org/debian jessie-backports main" > /etc/apt/sources.list.d/jessie-backports.list
+RUN sed -i '/deb http:\/\/deb.debian.org\/debian jessie-updates main/d' /etc/apt/sources.list
+RUN apt-get -o Acquire::Check-Valid-Until=false update
+RUN apt-get install -y openssh-client
+
 USER executor
+RUN ssh-keygen -t rsa -N "" -f ~/.ssh/id_rsa
 WORKDIR ${APP_HOME}
